implemented retry on login

--- a/assets/index.html
+++ b/assets/index.html
@@ -224,5 +224,6 @@
 <script src="/js/controllers/SidebarCtrl.js"></script>
 <script src="/js/services/Api.service.js"></script>
 <script src="/js/services/User.service.js"></script>
+<script src="/js/services/Modal.service.js"></script>
 </body>
 </html>
