added new styles for sources and news

--- a/assets/index.html
+++ b/assets/index.html
@@ -58,7 +58,7 @@
     </ul>
     <div class="sidebar-footer">
       <div class="col-xs-12">
-        <a href="#" target="_blank">
+        <a href="https://github.com/sandro001/rss-aggregator" target="_blank">
           <i class="fa fa-github" aria-hidden="true"></i>
           Github
         </a>
@@ -115,7 +115,7 @@
           </div>
           <div class="meta">
             <div class="page">
-              Rss-Aggregator
+              <i class="blue">R</i><i class="orange">S</i><i class="green">S</i><i class="cornflower">-Aggregator</i>
             </div>
           </div>
         </div>
@@ -124,26 +124,6 @@
 
       <!-- Main Content -->
       <div ui-view>
-        <!--<div class="searchForm">-->
-        <!--<div class="row">-->
-
-        <!--<div class="form-group col-xs-4">-->
-        <!--&lt;!&ndash;<label for="tag" class="cols-sm-2 control-label">Tag of New</label>&ndash;&gt;-->
-        <!--<input type="text" class="form-control" id="tag"  placeholder="Tag" tabindex="1"/>-->
-        <!--</div>-->
-
-        <!--<div class="form-group col-xs-4">-->
-        <!--&lt;!&ndash;<label for="url" class="cols-sm-2 control-label">Url</label>&ndash;&gt;-->
-        <!--<input type="url" class="form-control" name="url" id="url"  placeholder="Url" tabindex="2"/>-->
-        <!--</div>-->
-        <!--<div class="form-group col-xs-4">-->
-        <!--<button class="btnSearch btn" type="button" ng-click="search()" tabindex="3">Search for News</button>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
-
-        
-
         <div ng-controller="NewsCtrl">
           <div class="newsChannel" ng-repeat="article in news">
 
